plugins {
    id "nebula.lint" version "20.2.0"
    id "com.gradleup.shadow" version "9.2.1"
}

// Run manually with "./gradlew autoLintGradle"
// Unused dependency warning cannot always be trusted, always verify ("this dependency is unused and can be removed")
gradleLint.rules = ['all-dependency']
gradleLint.alwaysRun = false

allprojects {
    apply plugin: 'java'
    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(25)
        }
    }

    configurations.all {
        // commons-logging and jcl-over-slf4j pulled in by different deps
        // resulting in duplicate org.apache.commons.logging.impl.* classes
        exclude group: "commons-logging", module: "commons-logging"

        // Not needed since Java 6
        exclude group: "stax", module: "stax-api"
    }

    plugins.withId('groovy') {
        apply plugin: 'codenarc'
        codenarc {
            configFile = new File("${project.projectDir}/../codenarc.config")
            ignoreFailures = true
            dependencies {
                codenarc("org.codenarc:CodeNarc:${codeNarcVersion}")
                codenarc("org.apache.groovy:groovy:${groovyVersion}")
            }
        }
    }
}
